--- a/config.lua.dist
+++ b/config.lua.dist
@@ -253,8 +253,9 @@ deathLosePercent = -1
 -- NOTE: set housePriceEachSQM to -1 to disable the ingame buy house functionality
 -- NOTE: set houseBuyLevel to 0 to disable the min level purchase functionality.
 -- Periods: daily/weekly/monthly/yearly/never
-housePriceEachSQM = 10000
+housePriceEachSQM = 1000
 houseRentPeriod = "never"
+houseRentRate = 1.0
 houseOwnedByAccount = false
 houseBuyLevel = 100
 
